feat: upgraded recommendation engine v2
RecommendationEngine:
- Weighted skill score: easy×1 + medium×2 + hard×3 / weighted_target
- Learning stage detection: BEGINNER / INTERMEDIATE / ADVANCED
- Stage-aware difficulty: BEGINNER→Easy, INTERMEDIATE→Medium, ADVANCED→Hard
- Improved scoring weights: topic weakness ×6, diff match ×4, platform ×2, novelty ×1
- buildBalancedSet(): 4-slot picks (weak + progression + stretch + exploration)
- Stage-aware reason messages

ProblemFetchService (new):
- Fetches problems from LeetCode GraphQL by topic tag + difficulty
- @Cacheable('problems') — 6-hour in-memory cache per topic::difficulty
- mergedProblems(): DB problems + live fetch, de-duped by titleSlug
- Graceful degradation if LeetCode API unreachable

CacheConfig (new):
- @EnableCaching with ConcurrentMapCacheManager
- Cache names: 'problems' (6h), 'daily_recs' (24h)

pom.xml:
- Added spring-boot-starter-cache + caffeine dependencies

RecommendationService:
- Integrated ProblemFetchService for live+cached problem pool
- Passes LearningStage to engine for stage-aware scoring
- buildBalancedSet() for varied daily picks
- learningStage exposed in API response